--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,7 +1,7 @@
 .cart {
   position: absolute;
   right: 20px;
-  top: 80px;
+  bottom: 80px;
   z-index: 999;
   background-color: white;
   padding: 20px;
@@ -73,9 +73,23 @@
     margin-bottom: 20px;
   }
 
-  .reset{
-    color:red;
+  .reset {
+    color: red;
     font-size: 12px;
     cursor: pointer;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .cart {
+    position: absolute;
+    right: 20px;
+    top: 80px;
+    bottom: auto;
+    z-index: 999;
+    background-color: white;
+    padding: 20px;
+    -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
   }
 }
