--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,56 +1,38 @@
 .footer {
-  margin: 100px 200px 20px 200px;
+  margin: 50px 20px ;
 
-  .top {
+  .item {
+    flex: 1;
     display: flex;
-    gap: 50px;
+    flex-direction: column;
+    gap: 10px;
+    text-align: justify;
+    font-size: 14px;
 
-    .item {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      text-align: justify;
-      font-size: 14px;
+    h1 {
+      font-size: 18px;
+      font-weight: 500;
+      color: #555;
+    }
 
-      h1{
-        font-size: 18px;
-        font-weight: 500;
-        color: #555;
-      }
-
-      span{
-        color: gray;
-      }
+    span {
+      color: gray;
     }
   }
 
-  .bottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 50px;
-    .left {
-      display: flex;
-      align-items: center;
+  .logo {
+    color: #2879fe;
+    font-weight: bold;
+    font-size: 24px;
+  }
 
-      .logo{
-        color: #2879fe;
-        font-weight: bold;
-        font-size: 24px;
-      }
+  .copyright {
+    margin-left: 20px;
+    font-size: 12px;
+    color: gray;
+  }
 
-      .copyright{
-        margin-left: 20px;
-        font-size: 12px;
-        color: gray;
-      }
-    }
-    .right {
-
-      img{
-        height: 50px;
-      }
-    }
+  img {
+    height: 50px;
   }
 }
