--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: hidden;
 
-  .container{
+  .image-slider{
     width: 300vw;
     height: 100%;
     display: flex;
