--- a/strapi-store-client/src/components/Card/Card.scss
+++ b/strapi-store-client/src/components/Card/Card.scss
@@ -1,9 +1,7 @@
 .card-show {
-
   margin-bottom: 50px;
 
   .image {
-
     height: 400px;
     overflow: hidden;
     position: relative;
@@ -15,7 +13,7 @@
     }
 
     img {
-     
+      width: 100%;
       height: 100%;
       object-fit: cover;
       position: absolute;
