--- a/strapi-store-client/src/components/Categories/Categories.scss
+++ b/strapi-store-client/src/components/Categories/Categories.scss
@@ -1,28 +1,9 @@
 .categories {
-  display: flex;
-  height: 80vh;
-  gap: 10px;
   margin: 10px;
-
-  .col {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .col-l {
-    flex: 2;
-  }
-
-  .row{
-    flex:1;
-    display: flex;
-    gap: 10px;
+  .description {
     position: relative;
-    overflow: hidden;
-
-    button{
+    margin-bottom: 5px;
+    button {
       position: absolute;
       min-width: 100px;
       width: fit-content;
@@ -39,11 +20,15 @@
       text-transform: uppercase;
       font-weight: 500;
     }
+  }
 
-    img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  img {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
+  }
+
+  .right {
+    height: 60vh;
   }
 }
